# ShadowCap

./: .gitignore  API.md  CLIENT_INSTALLATION_GUIDE.md  Dockerfile  QUICK_START_GUIDE.md  README.md  SERVER_INSTALLATION_GUIDE.md  WORKFLOW.md  build_client.py  docker-compose.yml  get_machine_id.py  install_client_service.bat  install_server_service.bat  nginx.conf  pyproject.toml  start_server.bat  test_license.py  test_simple.py  test_system.py  uninstall_client_service.bat  uninstall_server_service.bat
.github/workflows/: ci.yml
client/: client_config.py  config.py  heartbeat.py  logging_setup.py  offline_queue.py  requirements.txt  retry_handler.py  screen_recorder.py
server/: .env  .env.example  alembic.ini  api_key_auth.py  app.py  auth.py  config.py  health_alerting.py  key_manager.py  logging_config.py  models.py  requirements.txt  two_factor.py  validators.py  video_encryption.py  websocket_manager.py
server/migrations/: README.md  env.py
server/routes/: __init__.py  admin.py  api.py
server/templates/: base.html  client.html  connection_logs.html  dashboard.html  generate_license.html  license_result.html  login.html
shared/: __init__.py  license_manager.py
tests/: conftest.py  test_auth.py  test_integration.py  test_models.py  test_offline_queue.py  test_retry_handler.py  test_server.py
