[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shadowcap"
version = "1.0.0"
description = "ShadowCap — Screen Recording & Management System"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "ShadowCap Team"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
]

dependencies = [
    "cryptography>=41.0",
]

[project.optional-dependencies]
server = [
    "flask>=3.0",
    "flask-cors>=4.0",
    "flask-sqlalchemy>=3.1",
    "flask-migrate>=4.0",
    "pydantic-settings>=2.0",
    "pyjwt>=2.8",
    "gunicorn>=21.0",
    "psycopg2-binary>=2.9",
]
client = [
    "opencv-python>=4.8",
    "mss>=9.0",
    "pyaudio>=0.2",
    "requests>=2.31",
    "python-socketio>=5.10",
]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "flake8>=6.1",
    "black>=23.0",
]

[tool.setuptools.packages.find]
include = ["shared*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"
]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.black]
line-length = 120
target-version = ["py311"]

[tool.flake8]
max-line-length = 120
exclude = ["migrations", "__pycache__", ".eggs", "*.egg"]
